# c-env-utils

./: .gitignore  CPPLINT.cfg  Doxyfile  LICENSE  meson.build  meson_options.txt
.github/workflows/: ci.yml  doxygen.yml
docs/: Doxygen.md  README.md  ReturnValues.md
docs/doxygen/: header.html
include/: env_utils.h  env_utils_windows.h
src/: common.c  env_utils_cli.c  env_utils_priv.h  haiku.cpp  unix.c  windows.c  wmi.cpp
tests/: main.cpp  meson.build  path_tests.hpp  true_env_info.h.in  util_tests.hpp
tests/test_cli/: main.c  meson.build
